# Progra2

./: CMakeLists.txt  README.md  cita.txt  datos1.txt  datos_19.txt
Semana0/: main2.cpp
Semana1/: a.cpp  a.h  b.cpp  b.h  mainWeek1.cpp
Semana10/ExperimentoEstrategia/: MainWeek10.cpp  baseObject4.cpp  baseObject4.h  contexto.cpp  contexto.h  estrategia.cpp  estrategia.h
Semana10/observer/: MainWeek10Observer.cpp  baseObject5.cpp  baseObject5.h  contexto1.cpp  contexto1.h  estrategia1.cpp  estrategia1.h
Semana10/strategy/: MainWeek10Strategy.cpp  ansi_term1.cpp  ansi_term1.h  contexto2.cpp  contexto2.h  estrategia2.cpp  estrategia2.h
Semana11/: MainWeek11.cpp  ansi_term.cpp  ansi_term.h  matriz.cpp  matriz.h
Semana2/: mainWeek2.cpp  punto.cpp  punto.h  puntoPolar.cpp  puntoRectangulo.cpp
Semana3/: BaseObject.h  a1.cpp  a1.h  b1.cpp  b1.h  baseObject.cpp  clases.h  mainWeek3.cpp
Semana4/: mainWeek4.cpp
Semana5/: MainWeek5_1.cpp  a2.cpp  a2.h  b2.cpp  b2.h  b4.cpp  b4.h  clases2 .h  d.cpp  d.h  ib.h  mainWeek5_2.cpp
Semana6/: MainWeek6.cpp
Semana6/Ejemplo10/: baseObject1.cpp  baseObject1.h  clases3.h  empleado.cpp  empleado.h  lista.h  listaPersonas.cpp  listaPersonas.h  mainWeek6Exercise10.cpp  persona.cpp  persona.h
Semana7/: MainWeek7.cpp  a3.cpp  a3.h  baseObject2.cpp  baseObject2.h  smartPtr.h
Semana8/ejemplo15/: MainWeek8Exercise15.cpp  a4.cpp  a4.h  ia.cpp  ia.h
Semana8/semana12_2/: MainWeek8Exercise12_2.cpp  b4.h  clases4.h  d1.cpp  d1.h  d2.cpp  d2.h  d3.cpp  d3.h  f.cpp  f.h
Semana9/Ejemplo19/: MainWeek9Exercise19.cpp  b5.cpp  b5.h  baseObject3.cpp  baseObject3.h  clases5.h  token.cpp  token.h
Semana9/Experimento9/: mainWeek9Experiment9.cpp
