cmake_minimum_required(VERSION 3.31)
project(PrograII)

set(CMAKE_CXX_STANDARD 20)

add_executable(PrograII
        Semana0/main2.cpp
        Semana1/b.cpp
        Semana1/b.h
        Semana1/a.cpp
        Semana1/a.h
        Semana1/mainWeek1.cpp
        Semana2/punto.cpp
        Semana2/punto.h
        Semana2/puntoPolar.cpp
        Semana2/puntoRectangulo.cpp
        Semana2/mainWeek2.cpp
        Semana3/baseObject.cpp
        Semana3/BaseObject.h
        Semana3/b1.cpp
        Semana3/b1.h
        Semana3/a1.cpp
        Semana3/a1.h
        Semana3/mainWeek3.cpp
        Semana3/clases.h
        Semana4/mainWeek4.cpp
        Semana5/MainWeek5_1.cpp
        Semana5/a2.cpp
        Semana5/a2.h
        Semana5/b2.cpp
        Semana5/b2.h
        Semana5/ib.h
        Semana5/d.cpp
        Semana5/d.h
        Semana5/b4.cpp
        Semana5/b4.h
        "Semana5/clases2 .h"
        Semana5/mainWeek5_2.cpp
)
