cmake_minimum_required(VERSION 3.31)
project(PrograII)

set(CMAKE_CXX_STANDARD 20)

add_executable(PrograII
        Semana0/main2.cpp
        Semana1/b.cpp
        Semana1/b.h
        Semana1/a.cpp
        Semana1/a.h
        Semana1/mainWeek1.cpp
        Semana2/punto.cpp
        Semana2/punto.h
        Semana2/puntoPolar.cpp
        Semana2/puntoRectangulo.cpp
        Semana2/mainWeek2.cpp
        Semana3/baseObject.cpp
        Semana3/BaseObject.h
        Semana3/b1.cpp
        Semana3/b1.h
        Semana3/a1.cpp
        Semana3/a1.h
        Semana3/mainWeek3.cpp
        Semana3/clases.h
        Semana4/mainWeek4.cpp
        Semana5/MainWeek5_1.cpp
        Semana5/a2.cpp
        Semana5/a2.h
        Semana5/b2.cpp
        Semana5/b2.h
        Semana5/ib.h
        Semana5/d.cpp
        Semana5/d.h
        Semana5/b4.cpp
        Semana5/b4.h
        "Semana5/clases2 .h"
        Semana5/mainWeek5_2.cpp
        Semana6/Ejemplo10/baseObject1.cpp
        Semana6/Ejemplo10/baseObject1.h
        Semana6/Ejemplo10/empleado.cpp
        Semana6/Ejemplo10/empleado.h
        Semana6/Ejemplo10/persona.cpp
        Semana6/Ejemplo10/persona.h
        Semana6/Ejemplo10/lista.h
        Semana6/Ejemplo10/listaPersonas.cpp
        Semana6/Ejemplo10/listaPersonas.h
        Semana6/Ejemplo10/clases3.h
        Semana6/Ejemplo10/mainWeek6Exercise10.cpp
        Semana6/MainWeek6.cpp
        Semana7/baseObject2.cpp
        Semana7/baseObject2.h
        Semana7/a3.cpp
        Semana7/a3.h
        Semana7/smartPtr.h
        Semana7/MainWeek7.cpp
        Semana8/ejemplo15/ia.cpp
        Semana8/ejemplo15/ia.h
        Semana8/ejemplo15/a4.cpp
        Semana8/ejemplo15/a4.h
        Semana8/ejemplo15/MainWeek8Exercise15.cpp
        Semana8/semana12_2/f.cpp
        Semana8/semana12_2/f.h
        Semana8/semana12_2/b4.h
        Semana8/semana12_2/d1.cpp
        Semana8/semana12_2/d1.h
        Semana8/semana12_2/d2.cpp
        Semana8/semana12_2/d2.h
        Semana8/semana12_2/d3.cpp
        Semana8/semana12_2/d3.h
        Semana8/semana12_2/clases4.h
        Semana8/semana12_2/MainWeek8Exercise12_2.cpp
        Semana9/Ejemplo19/token.cpp
        Semana9/Ejemplo19/token.h
        Semana9/Ejemplo19/baseObject3.cpp
        Semana9/Ejemplo19/baseObject3.h
        Semana9/Ejemplo19/b5.cpp
        Semana9/Ejemplo19/b5.h
        Semana9/Ejemplo19/clases5.h
        Semana9/Ejemplo19/MainWeek9Exercise19.cpp
        Semana9/Experimento9/mainWeek9Experiment9.cpp
        Semana10/ExperimentoEstrategia/contexto.cpp
        Semana10/ExperimentoEstrategia/contexto.h
        Semana10/ExperimentoEstrategia/baseObject4.cpp
        Semana10/ExperimentoEstrategia/baseObject4.h
        Semana10/ExperimentoEstrategia/estrategia.cpp
        Semana10/ExperimentoEstrategia/estrategia.h
        Semana10/ExperimentoEstrategia/MainWeek10.cpp
        Semana11/matriz.cpp
        Semana11/matriz.h
        Semana11/ansi_term.cpp
        Semana11/ansi_term.h
        Semana11/MainWeek11.cpp
)
